fix(RHF, sign-in, locales): update RHF, translate and locales

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,7 +3,16 @@
   "Language": "Language",
   "English": "English",
   "Japanese": "Japanese",
+  "Username is required": "Username is required",
+  "Username too long!": "Username too long!",
   "Homepage": "Homepage",
+  "Password is required": "Password is required",
+  "Password must be more than 8 characters": "Password must be more than 8 characters",
+  "Sign In": "Sign In",
+  "Username": "Username",
+  "Password": "Password",
+  "Remember me": "Remember me",
+  "Forgot password?": "Forgot password?",
   "button": {
     "next": "Next",
     "back": "Back",
