--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -4,6 +4,15 @@
   "English": "English",
   "Japanese": "Japanese",
   "Homepage": "ホームページ",
+  "Username is required": "ユーザー名が必要です",
+  "Username too long!": "ユーザー名が長すぎます!",
+  "Password is required": "パスワードが必要",
+  "Password must be more than 8 characters": "パスワードは8文字以上である必要があります",
+  "Sign In": "ログイン",
+  "Username": "ユーザー名",
+  "Password": "パスワード",
+  "Remember me": "私を覚えてますか",
+  "Forgot password?": "パスワードをお忘れですか？",
   "button": {
     "next": "Next",
     "back": "Back",
