feat: updated review code

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,7 +13,8 @@
     "cancel": "Cancel",
     "change": "Change",
     "signIn": "Sign in",
-    "signUp": "Sign up"
+    "signUp": "Sign up",
+    "getStarted": "Get Started"
   },
   "greetingModal": "Welcome To Our website",
   "sayHello": "Hello everyone!",
