fix(register, sign-in): add text to locales

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,6 +13,8 @@
   "Password": "Password",
   "Remember me": "Remember me",
   "Forgot password?": "Forgot password?",
+  "Back to": "Back to",
+  "Creat a new account": "Creat a new account",
   "button": {
     "next": "Next",
     "back": "Back",
