--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -13,6 +13,8 @@
   "Password": "パスワード",
   "Remember me": "私を覚えてますか",
   "Forgot password?": "パスワードをお忘れですか？",
+  "Back to": "戻る",
+  "Creat a new account": "新しいアカウントを作成する",
   "button": {
     "next": "Next",
     "back": "Back",
